migrating to spring 3